# OasisEngine

./: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/include/core/: Core.h  Log.h
engine/core/src/: Core.cpp  Log.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/platform/: Platform.h
engine/platform/src/: Platform.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
